# Map2Check

./: .gitignore  CMakeLists.txt  Dockerfile
cmake/: FindCrabLlvm.cmake  FindKlee.cmake  FindKleeUCLibC.cmake  FindLibFuzzer.cmake  FindMiniSat.cmake  FindSTP.cmake  FindZ3.cmake
docs/docs_doxygen/html/: Map2CheckFunctions_8c.html  Map2CheckFunctions_8h.html  Map2CheckFunctions_8h_source.html  globals.html  globals_func.html
modules/backend/pass/: GenerateAutomataTruePass.cpp  TargetPass.cpp  (+1 more)
modules/frontend/: map2check.cpp
test-comp2023/: .gitignore  chklist-coverage-bugfinding.md  conventions-usage.md  conventions.md  outputListForTestComp2023.md  processo-criacao-container-map2check-competicao.md  testing-workflow.md  todo.md
test-comp2023/annotations/: Pre-Requisitos-TestComp.md  chklist-coverage-bugfinding.md  conventions-usage.md  testing-workflow.md
test-comp2023/simulation/: map2check-dummy.xml  map2check.xml  nohup.out  script-rodar-testcov-nos-resultados.py  script_csv_extractor.py  script_execucao-semtestcov.py  script_execucao.py  script_numeros-totais.py
test-comp2023/test-comp-examples/: check-example.py  metadata.xml  testcase-1.xml  testcase-2.xml  testcase-3.xml
test-comp2023/tools/: .gitignore  data_extractor.py  graph_visualization.py  map2check-script-anotacoes.md  map2check.xml  testcov-script - original.bash  testcov-script.bash
test-comp2023/tools/testcov/label-adder/src/: CMakeLists.txt  OptionsStruct.hpp
utils/: map2check-wrapper-reg-test.py  map2check-wrapper.py  map2check-wrapper_with_Automizer.py  map2check-wrapper_with_CPA.py
(+369 files in other folders)
